Ensure plots are not cut off on display page
Address #728

Ensure that the bottom of plots are not cut off on individual
simulation result display page.

--- a/css/chimad.css
+++ b/css/chimad.css
@@ -166,12 +166,15 @@ table.striped tbody tr:nth-child(2n+1) {
     max-height: 70%;
 }
 
+#logo_image .card.small .card-image {
+    max-height: 80%;
+    max-width: 80%;
+}
+
 .card.small .card-content.scroll {
     overflow: auto;
     max-height: 30%;
 }
-
-
 
 .materialboxed.responsive-img.initialized {
     background-color: white;
